# python_tools

./: README.md  fabfile-example.py  fix_snapshot.c  qemu_info.py  snapshot_test.c  threadevent.py
automation/: README.rst  compute_test.py  long_run_tests.py  network_test.py  request_description.txt  requirements.txt  run_testcases.py  setup.cfg  tox.ini
automation/automation/: auth.py  clients.py  compute.py  config.py  manager.py
automation/automation/common/: accounts.py  compute.py  cred_provider.py  credentials.py  exceptions.py  fixed_network.py  glance_http.py  isolated_creds.py  negative_rest_client.py  rest_client.py  service_client.py  ssh.py  validation_resources.py  waiters.py
automation/etc/: automation.conf  automation.conf.sample
automation/test_discover/: test_discover.py
automation/testcases/: base_ssh.py  test.py  test_api_example.py  test_example.py
automation/testcases/compute_tests/: 2  __init__.py  base_compute.py  base_monitor.py  test_associate_floatingip.py  test_attach_volume.py  test_capture_image.py  test_create_server.py  test_create_vm_from_capture_image.py  test_live_migration.py  test_migration.py  test_modify_server_qos.py  test_resize_server.py  test_server_power_action.py  test_update_vm_password.py
automation/testcases/network_tests/: base.py  teset_multiple_vm_create_delete.py  test_accessibility_between_networks.py  test_basic_network.py  test_firewall.py  test_securitygroup.py
automation/testcases/volume_tests/: base.py  test_attach_volume.py  test_create_qos_type.py  test_create_volume.py  test_create_volume_type.py  (+10 more)
(+373 files in other folders)
