[metadata]
name = automation
summary = Kingstack Integration Testing
description-file =
    README.rst
author = Kunlun GUAN
author-email = guankunlun@kingsoft.com
home-page = http://www.openstack.org/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    automation
data_files =
    etc/automation = etc/*

[entry_points]
oslo.config.opts =
    automation.config = automation.config:list_opts


